tests/ui/openapi_type/rename_non_string.stderr
error: Expected string literal
 --> $DIR/rename_non_string.rs:6:21
  |
6 |     #[openapi(rename = 42)]
  |                        ^^
